# TrunkBundler

./: Cargo.toml  README.md
src/: asset_manager.rs  errors.rs  helpers.rs  js_bundler.rs  main.rs  pipelines.rs
src/js_bundler/: bundler.rs  configuration.rs  globals.rs  loading.rs
src/pipelines/: app.rs  html.rs  js.rs
