[package]
name = "trunk_bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
walkdir = "2.3.3"
thiserror = "1.0.40"
anyhow = "1.0.71"
rustc-hash = "1.1.0"
rayon = "1.7.0"
minify-html = "0.10.8"
glob = "0.3.1"

nipper = "0.1.9"

swc = "0.260.43"
swc_bundler = "0.213.32"
swc_atoms = "0.5.3"
swc_common = { version = "0.31.5", features = ["tty-emitter"] }
swc_ecma_ast = "0.103.5"
swc_ecma_codegen = { version = "0.138.15", features = ["serde-impl"] }
swc_ecma_minifier = { version = "0.180.32", features = ["extra-serde"] }
swc_ecma_parser = { version = "0.133.12", features = ["typescript"] }
swc_ecma_transforms = "0.217.28"
swc_ecma_transforms_react = "0.172.26"
swc_ecma_visit = "0.89.5"
swc_ecma_loader = "0.43.7"
