[package]
name = "trunk_bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
walkdir = "2.3.3"
thiserror = "1.0.40"
anyhow = "1.0.71"
rustc-hash = "1.1.0"
rayon = "1.7.0"
minify-html = "0.10.8"
glob = "0.3.1"

nipper = "0.1.9"

swc = "0.261.41"
swc_bundler = "0.214.31"
swc_atoms = "0.5.6"
swc_common = { version = "0.31.12", features = ["tty-emitter"] }
swc_ecma_ast = "0.104.5"
swc_ecma_codegen = { version = "0.139.17", features = ["serde-impl"] }
swc_ecma_minifier = { version = "0.181.31", features = ["extra-serde"] }
swc_ecma_parser = { version = "0.134.12", features = ["typescript"] }
swc_ecma_transforms = "0.218.24"
swc_ecma_transforms_react = "0.173.20"
swc_ecma_visit = "0.90.5"
swc_ecma_loader = "0.43.14"
